# CAM

./: .config_files.xml  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Externals.cfg  Externals_CAM.cfg  README.md  README.ssfcst  README_EXTERNALS  esm  install  install_CAM  job.sh  output
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement_request.yml  other.yml
.github/scripts/: branch_pr_issue_closer.py  readme_tag_update.py  tag_check_readme_update.py
.github/workflows/: branch_push_workflow.yml  fleximod-test.yml  fleximod_test.yaml  tag_push_workflow.yml
bld/: Makefile.in  build-namelist  configure  mkSrcfiles
bld/config_files/: definition.xml  horiz_grid.xml
bld/namelist_files/: geoschem_master_aer_drydep_list.xml  geoschem_master_aer_wetdep_list.xml  geoschem_master_gas_drydep_list.xml  geoschem_master_gas_wetdep_list.xml  master_aer_drydep_list.xml  master_aer_wetdep_list.xml  master_gas_drydep_list.xml  master_gas_wetdep_list.xml  mozart_master_aer_drydep_list.xml  mozart_master_aer_wetdep_list.xml  mozart_master_gas_drydep_list.xml  mozart_master_gas_wetdep_list.xml  namelist_defaults_cam.xml  namelist_definition.xml
bld/scripts/: camfv2iop.ncl  create_scam6_iop  create_scam6_iop_multi  remapfv2eul.ncl
cime_config/: buildcpp  buildlib  buildnml  cam.case_setup  cam.case_setup.py  config_archive.xml  config_component.xml  config_compsets.xml  config_pes.xml  config_tests.xml  temp_tuvx_config.json  tuvx_MOZART.json  tuvx_MOZART_TS1.json  tuvx_MOZART_TSMLT.json
cime_config/SystemTests/: erc.py  mgp.py  plb.py  sct.py  sub.py  tmc.py
cime_config/testdefs/: testlist_cam.xml
doc/: ChangeLog_MPAS  ChangeLog_template  ReleaseNotes
libs/: README.md
manage_externals/: checkout_externals
myPythonTools/: STUB_iop.nc  cnode.csh  ens_run.sh  h0scam.py  scam_case.py  scam_drv.py  scam_ens.py  testh0.py  txtutil.py  user_nl_cam  user_nl_cam_L58_cheyenne  user_nl_cam_L93_cheyenne  user_nl_cice
src/: pbuf_add_field_nofile_sort_nospace_uniq
src/control/: budgets.F90  cam_budget.F90  cam_comp.F90  cam_control_mod.F90  cam_history.F90  cam_history_buffers.F90  cam_history_support.F90  cam_initfiles.F90  cam_instance.F90  cam_restart.F90  cam_snapshot.F90  cam_snapshot_common.F90  camsrfexch.F90  filenames.F90  getinterpnetcdfdata.F90  history_defaults.F90  history_scam.F90  ncdio_atm.F90  runtime_opts.F90  sat_hist.F90  scamMod.F90
src/cpl/: atm_comp_mct.F90  atm_import_export.F90  cam_cpl_indices.F90
src/infrastructure/: phys_grid.F90  physics_column_type.F90
src/ionosphere/: epotential_params.F90  ionosphere_interface.F90
src/physics/: .clubb_sparse_checkout  .silhs_sparse_checkout
src/unit_drivers/: drv_input_data.F90  offline_driver.F90
src/utils/: CMakeLists.txt  air_composition.F90  bnddyi.F90  buffer.F90.in  cam_abortutils.F90  cam_diagnostic_utils.F90  cam_grid_support.F90  cam_map_utils.F90  cam_pio_utils.F90  cam_thermo.F90  cam_thermo_formula.F90  ccpp_constituent_prop_mod.F90  ccpp_kinds.F90  coords_1d.F90  ctem_diags_mod.F90  datetime.F90  error_messages.F90  esmf_check_error_mod.F90  esmf_lonlat_grid_mod.F90  esmf_phys2lonlat_mod.F90  esmf_phys_mesh_mod.F90  esmf_zonal_mean_mod.F90  fft99.F90  gauaw_mod.F90  gmean_mod.F90  hybvcoord_mod.F90  hycoef.F90  interpolate_data.F90  intp_util.F90  ioFileMod.F90  linear_1d_operators.F90  orbit.F90  physconst.F90  sgexx.F90  spmd_utils.F90  srchutil.F90  srf_field_check.F90  std_atm_profile.F90  string_utils.F90  table_interp_mod.F90  (+5 more)
test/system/: CAM_compare.sh  CAM_runcmnd.sh  CAM_utils.sh  TBL.sh  TBL_ccsm.sh  TBR.sh  TCB.sh  TCB_ccsm.sh  TEQ_ccsm.sh  TER.sh  TER_ccsm.sh  TFM.sh  TGIT.sh  TNE_ccsm.sh  TPF.sh  TR8.sh  TSM.sh  TSM_ccsm.sh  archive_baseline.sh  da_cam_no_data_mod.sh  gen-test-coverage  gen-test-style.css  gen-test-table  input_tests_master  test_driver.sh  tests_carma  tests_chem_hybrid  tests_chem_mpi  tests_pretag_cheyenne  tests_pretag_hobart_nag  tests_pretag_izumi_nag  tests_pretag_izumi_pgi  tests_pretag_leehill  tests_waccm_hybrid  tests_waccm_mpi  tests_waccmx_hybrid  tests_waccmx_mpi
test/unit/: CMakeLists.txt  README.txt
test/unit/coords_1d/: CMakeLists.txt  test_coords_1d.pf
test/unit/linear_1d_operators/: CMakeLists.txt  test_arithmetic.pf  test_derivatives.pf  test_diagonal.pf
test/unit/micro_mg_data/: CMakeLists.txt  test_MGFieldPostProc.pf  test_MGPacker.pf  test_MGPostProc.pf
test/unit/micro_mg_utils/: CMakeLists.txt  test_mg_processes.pf  test_mg_size_utils.pf
test/unit/vdiff_lu_solver/: CMakeLists.txt  test_fd_solver.pf  test_fv_solver.pf
tools/interpic_new/: README
(+2023 files in other folders)
